# auto_video_pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: food_promo.yaml  sample_job.yaml
docs/: architecture.md  pipeline-spec.md
inputs/manifests/: music_catalog.yaml
src/auto_video_pipeline/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/auto_video_pipeline/stages/: __init__.py  asset_intake.py  music.py  render.py  scoring.py  timeline.py
